--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
-  "type": "module",
+  "main": "core/main.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start:web": "vite",
+    "build:web": "tsc && vite build",
+    "preview": "vite preview",
+    "build:desktop": "tsc -p core/tsconfig.json",
+    "start:desktop": "npm run build:desktop && electron build/main.js",
+    "migrate": "cd core && npx prisma migrate dev --name init",
+    "studio": "cd core && npx prisma studio",
+    "build": "electron-builder --x64",
+    "publish": "electron-builder --x64 --win -p always",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
@@ -18,12 +26,15 @@
     "axios": "^1.3.2",
     "electron": "^23.0.0",
     "framer-motion": "^9.0.2",
+    "kute.js": "^2.2.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/redux-logger": "^3.0.9",
