--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "react-svg-curve": "^0.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
