--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "react-svg-curve": "^0.2.1"
+    "react-svg-curve": "^0.2.1",
+    "recharts": "^2.4.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
