--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "chakra-multiselect": "^0.3.11",
+    "chakra-react-select": "^4.4.3",
     "color-thief-ts": "^1.1.1",
     "electron": "^23.0.0",
     "framer-motion": "^9.0.2",
