--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "outDir": "../build",
+    "outDir": "../dist",
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
