--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:web": "tsc && vite build",
     "preview": "vite preview",
     "build:desktop": "tsc -p core/tsconfig.json",
-    "start:desktop": "npm run build:desktop && electron build/main.js",
+    "start:desktop": "npm run build:desktop && electron build/core/main.js",
     "migrate": "cd prisma && npx prisma migrate dev --name init",
     "studio": "cd core && npx prisma studio",
     "build": "electron-builder --x64",
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
