--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.3.4",
     "electron": "^21.3.3",
-    "electron-builder": "^23.6.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-vite": "^1.0.17",
     "eslint": "^8.31.0",
@@ -68,10 +67,14 @@
   },
   "build": {
     "appId": "com.yashrif.cphelper",
+    "productName": "CPHelper 1.0.0",
     "extraResources": [
       "prisma/**/*",
       "node_modules/.prisma/**/*",
       "node_modules/@prisma/client/**/*"
-    ]
+    ],
+    "extraMetadata": {
+      "main": "out/main/index.js"
+    }
   }
 }
