--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "electron-vite build && electron-builder --mac --config",
     "build:linux": "electron-vite build && electron-builder --linux --config",
-    "migrate": "cd prisma && npx prisma migrate dev --name init"
+    "migrate": "cd prisma && npx prisma migrate dev --name init",
+    "publish": "npm run build && electron-builder --win --config -p always"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
